objects/ProblemCaseLink__c.object
<CustomObject>
    <description>Junction Object to link Problem Object and Case Object for M:M relationship</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>if(ISBLANK( Case__r.AssetOwner__c),Case__r.Account.Name,if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;,Case__r.AssetOwner__r.Name, 
if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),Case__r.Account.Name, 
if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP4&quot;,Case__r.AssetOwner__r.Name, 
if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP4&quot;),Case__r.Account.Name, 
if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP5&quot;,Case__r.AssetOwner__r.Name,if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP5&quot;),Case__r.Account.Name,Case__r.AssetOwner__r.Name)))))))</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Problems</relationshipLabel>
        <relationshipName>Problem_Case_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Related Cases</relationshipLabel>
        <relationshipName>Problem_Case_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>REP_CaseAccountCountry__c</fullName>
        <formula>Case__r.Account.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueField__c</fullName>
        <label>TECH_UniqueField</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Problem-Case Link</label>
    <nameField>
        <displayFormat>PB-LNK-{0000}</displayFormat>
        <label>Problem Case Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problem-Case Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>